Moved unit test project to the appropriate folder.

--- a/StringReverser/EsiTest.StringReverser.UnitTests/EsiTest.StringReverser.UnitTests.csproj
+++ b/StringReverser/EsiTest.StringReverser.UnitTests/EsiTest.StringReverser.UnitTests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\StringReverser\EsiTest.StringReverser\EsiTest.StringReverser.csproj" />
+    <ProjectReference Include="..\EsiTest.StringReverser\EsiTest.StringReverser.csproj" />
   </ItemGroup>
 
 </Project>
