--- a/ATM/EsiTest.AutomatedTellerMachine.Business/EsiTest.AutomatedTellerMachine.Business.csproj
+++ b/ATM/EsiTest.AutomatedTellerMachine.Business/EsiTest.AutomatedTellerMachine.Business.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\EsiTest.AutomatedTellerMachine.Data\EsiTest.AutomatedTellerMachine.Data.csproj" />
+    <ProjectReference Include="..\EsiTest.AutomatedTellerMachine.Data\EsiTest.AutomatedTellerMachine.Data.csproj" />
   </ItemGroup>
 
 </Project>
